implementation: auth feature done
